[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/BaseEnemy.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Target_marker.png" type="Texture" id=4]

[node name="BaseEnemy_node" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 1025
collision_mask = 1025
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 1

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitboxPos" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="Hitbox" parent="HitboxPos" instance=ExtResource( 3 )]
position = Vector2( 30, 0 )
monitoring = false
monitorable = false
collision_layer = 32

[node name="TargetMarker" type="Sprite" parent="."]
visible = false
show_behind_parent = true
texture = ExtResource( 4 )
offset = Vector2( -0.5, -0.5 )

[connection signal="timeout" from="NavigationTimer" to="." method="_on_NavigationTimer_timeout"]

[editable path="Hurtbox"]
[editable path="HitboxPos/Hitbox"]
